# tcp_command_svc

./: .gitignore  GEMINI.md  LICENSE  README.md  pyproject.toml
docs/: REFERENCE.md
samples/: custom_client.py  custom_server.py
src/tcp_command_svc/: __init__.py  __main__.py  cmd_client.py  cmd_server.py  my_logger.py  sample_server.py
tests/: README.md  test_01_custom_server.py  test_01_default_server.py  test_02_custom_server.py
