[project]
name = "tcp-command-svc"
dynamic = ["version"]
#version = "v0.2.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Yoichi Tanibayashi", email = "yoichi@tanibayashi.jp" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.0,<0.9", "hatch-vcs"]
build-backend = "uv_build"

[tool.htach.version]
source = "vcs"
