[project]
name = "tcp-command-svc"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Yoichi Tanibayashi", email = "yoichi@tanibayashi.jp" }
]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "click",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "pytest>=8.4.1",
    "ruff>=0.12.4",
]
